# agora

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  settings.html  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: engines.ts  i18n.ts  main.ts  settings.css  settings.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/installer/: license.txt
src-tauri/src/: lib.rs  main.rs
tools/: make-installer-art.ps1
