[package]
name = "nexalix-agora"
version = "0.5.0"
description = "Nexalix Agora"
authors = ["blyss"]
edition = "2021"

[lib]
name = "nexalix_agora_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
png = "0.17"
base64 = "0.22"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Storage_FileSystem",
  "Win32_System_Com",
  "Win32_System_Power",
  "Win32_System_Shutdown",
] }

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
